Remove now-unnecessary add-opens parameters